--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coming Soon</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-
-  <div class="container">
-    <img src="./assets/ieee_bg.png" alt="IEEE Alex S Logo" class="logo">
-    <h1>Coming Soon</h1>
-  </div>
+	<section id="particles-js">
+		<div class="text">
+			<h2>Ramadan Mubarak</h2>
+			<h3>To You & Your Family!</h3>
+			<h4>IEEE-AlexSB</h4>
+			<h5>coming soon</h5>
+			<div class="mosque"></div>			
+		</div>
+	</section>
+  <script src="particles.js"></script>
+  <script src="app.js"></script>
 
 </body>
 </html>
